# speech-to-text

./: .env.example  .gitignore  DATABASE_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  README_MIGRATIONS.md  alembic.ini  init_database.py  pyproject.toml  requirements-database.txt  requirements.txt  test_models.py  verify_setup.py
alembic/: env.py
alembic/versions/: 001_create_transcription_and_lexicon_tables.py  001_initial_setup.py
src/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py
src/models/: __init__.py  lexicon.py  transcription.py
src/routers/: transcribe.py  transcription.py
src/schemas/: transcription.py
src/services/: README.md  __init__.py  openai_service.py  storage.py  transcription.py  transcription_service.py
src/utils/: __init__.py  retry.py
